Fix: Grant execution permission to gradlew in Docker

--- a/E-Waste-Management-System-main/backend/ewaste/Dockerfile
+++ b/E-Waste-Management-System-main/backend/ewaste/Dockerfile
@@ -9,6 +9,9 @@ COPY build.gradle .
 COPY settings.gradle .
 COPY src src
 
+# Fix permissions for gradlew
+RUN chmod +x gradlew
+
 # Build the application
 RUN ./gradlew clean bootJar -x test
 
