Fix: Explicitly set MySQL dialect for Render

--- a/E-Waste-Management-System-main/backend/ewaste/src/main/resources/application.properties
+++ b/E-Waste-Management-System-main/backend/ewaste/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.password=${DB_PASSWORD:mahez@123}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # --- JWT Configuration ---
 app.jwt.secret=${JWT_SECRET:iJHZ0lKj+WcDd2zU4N7JfYhbqK1F1xvG4H7vjxV6eHg=}
