--- a/E-Waste-Management-System-main/frontend/.env
+++ b/E-Waste-Management-System-main/frontend/.env
@@ -1,5 +1,5 @@
 VITE_GEMINI_API_KEY=AQ.Ab8RN6JP6WB5fdAHqMvnN06usYZ9YRTpff9r6f8TW5PwB6Wu-w
-VITE_API_URL=https://ecowaste-backend-nat3.onrender.com
+VITE_API_URL=https://smart-e-waste-collection-and-management.onrender.com
 # For local backend testing, use: DB_URL=jdbc:mysql://...
 DB_URL=jdbc:mysql://u6yq5yaily2pmezi:UYlnMezeLAS0bgo9rYOO@b6myqkagzuvprjmak3bt-mysql.services.clever-cloud.com:3306/b6myqkagzuvprjmak3bt
 DB_USERNAME=u6yq5yaily2pmezi
